4.11/dba9a0babdd938a51d11ae81f9c40d07ca613f43
math64, tile: Fix build failure

The build of tilegx allmodconfig fails with:
../arch/tile/include/asm/div64.h:5:15: error: unknown type name 'u64'
 static inline u64 mul_u32_u32(u32 a, u32 b)
               ^~~
../arch/tile/include/asm/div64.h:5:31: error: unknown type name 'u32'
 static inline u64 mul_u32_u32(u32 a, u32 b)
                               ^~~
../arch/tile/include/asm/div64.h:5:38: error: unknown type name 'u32'
 static inline u64 mul_u32_u32(u32 a, u32 b)
                                      ^~~
In file included from ../fs/ubifs/ubifs.h:26:0,
                 from ../fs/ubifs/shrinker.c:42:
../include/linux/math64.h: In function 'mul_u64_u32_shr':
../arch/tile/include/asm/div64.h:9:21: error: implicit declaration of
	function 'mul_u32_u32' [-Werror=implicit-function-declaration]

Include the linux/types.h in tiles div64.h to slve the problem.

Fixes: 9e3d6223d209 ("math64, timers: Fix 32bit mul_u64_u32_shr() and friends")
Signed-off-by: Sudip Mukherjee <sudip.mukherjee@codethink.co.uk>
Acked-by: Chris Metcalf <cmetcalf@mellanox.com>
Cc: Peter Zijlstra <peterz@infradead.org>
Cc: Sudip Mukherjee <sudipm.mukherjee@gmail.com>
Link: http://lkml.kernel.org/r/1485275961-20112-1-git-send-email-sudip.mukherjee@codethink.co.uk
Signed-off-by: Thomas Gleixner <tglx@linutronix.de>

